--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 title: Vish's Musings
 description: ML/Books/Spiritual
-github_username: vish
+github_username: findvish
 
 # Email and twitter are optional:
 email:
