Index/config changes

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Vish's Musings
-description: ML/Books/Spiritual
+title: Vish's ML/DL Threads
+description: Machine Learning
 github_username: findvish
 
 # Email and twitter are optional:
